<resources>
    <string name="app_name">Note Notifier</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_all">Clear all notifiers</string>
    <string name="action_set_on_boot">Set on boot</string>
    <string name="no_notes">No notes available</string>
    <string name="button_edit">"Edit/Notify"</string>
    <string name="button_del">Delete</string>
    <string name="button_notify">Notify</string>
    <string name="label_note_date">Note Date</string>
    <string name="label_note_title">Note Title</string>
    <string name="label_note_content">Note Content</string>
    <string name="note_added_snackbar">"Note added!"</string>
    <string name="note_notified_snackbar">"You've been notified!"</string>

    <!--Add note dialog strings-->
    <string name="add_note_dialog_title">Add a Note</string>
    <string name="modify_note_dialog_title">Modify Note</string>
    <string name="notification_title_hint">Add notification title here</string>
    <string name="notification_content_hint">Add notification content here</string>
    <string name="add_button">ADD</string>
    <string name="notify_button">NOTIFY</string>
    <string name="persistent_setting">Persistent</string>

    <!--Validation strings-->
    <string name="data_invalid_toast">Please make sure you\'ve entered the title</string>
</resources>
