<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <EditText
        android:id="@+id/notification_title_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/notification_title_hint"
        android:padding="15dp" />

    <EditText
        android:id="@+id/notification_content_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/notification_content_hint"
        android:padding="15dp" />

    <CheckBox
        android:id="@+id/checkbox_persistent"
        style="@style/CheckBoxStyle"
        android:text="@string/persistent_setting"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/button_notify"
        android:textColor="@android:color/white"/>

</LinearLayout>