<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="0.5sp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/note_date_label_view"
                style="@style/HistoryLabelTextViewStyle"
                android:text="@string/label_note_date" />

            <TextView
                android:id="@+id/note_date_view"
                style="@style/HistoryTextViewStyle"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/note_title_label_view"
                style="@style/HistoryLabelTextViewStyle"
                android:text="@string/label_note_title" />

            <TextView
                android:id="@+id/note_title_view"
                style="@style/HistoryTextViewStyle"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/note_content_label_view"
                style="@style/HistoryLabelTextViewStyle"
                android:text="@string/label_note_content" />

            <TextView
                android:id="@+id/note_content_view"
                style="@style/HistoryTextViewStyle"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNotifyPressed"
                android:text="@string/button_notify" />
            <!--

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/button_edit" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/button_del" />
            -->

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>