<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_vertical_margin"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2sp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/heading_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/headings_margin"
                android:text="@string/label_note_date"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/page_headings" />

            <TextView
                android:id="@+id/date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/headings_margin"
                android:padding="@dimen/headings_margin"
                android:textSize="@dimen/page_values" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="#eee">

            </View>

            <TextView
                android:id="@+id/heading_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/headings_margin"
                android:text="@string/label_note_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/page_headings" />

            <TextView
                android:id="@+id/title_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/headings_margin"
                android:textSize="@dimen/page_values" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="#eee">

            </View>

            <TextView
                android:id="@+id/heading_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/headings_margin"
                android:text="@string/label_note_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/page_headings" />

            <TextView
                android:id="@+id/content_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/headings_margin"
                android:textSize="@dimen/page_values" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="#eee">

            </View>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>